--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ highlighter: rouge
 
 
 ### content configuration ###
-title:       "SinglePaged - Simple Jekyll template"
-keywords:    "SinglePaged, jekyll, template, github, blog, single page"
-description: "A single-page template for Jekyll based blogs (like what you'd use on github pages!)"
+title:       "Money Making Apps - Earn Extra Money using your Android Phone"
+keywords:    ""
+description: "Want to earn extra money? Here are a few apps that make it easy to earn some extra money using your Android phone."
 source_link: "https://github.com/t413/SinglePaged"
 favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
