--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,11 @@ google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable
 colors:
   black:     '#111111'
   white:     '#f8f8f8'
-  blue:      '#49a7e9'
-  green:     '#9bcf2f'
-  purple:    '#c869bf'
-  orange:    '#fab125'
-  turquoise: '#0fbfcf'
+  teal:      '#33a39c'
+  light-blue:     '#9bcf2f'
+  blue:    '#336cad'
+  royal-blue:    '3348b3'
+  purple: '#4533b8'
 
 kramdown:
   auto_ids:  false
