--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ highlighter: rouge
 
 ### content configuration ###
 title:       "Money Making Apps - Earn Extra Money using your Android Phone"
-keywords:    ""
+keywords:    "Money Making Apps"
 description: "Want to earn extra money? Here are a few apps that make it easy to earn some extra money using your Android phone."
 source_link: "https://github.com/t413/SinglePaged"
 favicon:     "img/favicon.ico"
